--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="MjV-4j-4cY" id="1Xm-3x-zCo"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="Z0d-kj-h7u"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="Z0d-kj-h7u">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Q5e-ka-u6G">
+                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="MjV-4j-4cY" id="wWL-Is-jMG"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WXx-aa-Dlf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
